--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
               <p class="probootstrap-note">เหลือเพียง 500 กรัม</p>
               <ul class="probootstrap-list text-left mb50">
                 <li class="probootstrap-check">ประเภท: กาแฟอาราบิก้า</li>
-                <li class="probootstrap-check">ที่ปลูก: อำเภอท่าสองยาง เชียงราย, ประเทศไทย</li>
+                <li class="probootstrap-check">ที่ปลูก: อำเภอท่าสองยาง, ตาก, ประเทศไทย</li>
                 <li class="probootstrap-check">ความสูง: 900 เมตรเหนือระดับน้ำทะเล</li>
                 <li class="probootstrap-check">กระบวนการ: Wet (จะทำให้กาแฟได้รสชาติจากแหล่งที่ปลูกมากที่สุด)</li>
               </ul>
