--- a/index.html
+++ b/index.html
@@ -139,22 +139,23 @@
       <div class="container">
         <div class="row text-center mb100">
           <div class="col-md-8 col-md-offset-2 probootstrap-section-heading">
-            <h2 class="mb30 text-black probootstrap-heading">Weekly Stock Update!!</h2>
+            <h2 class="mb30 text-black probootstrap-heading">Weekly Stock Update!! (27 ตุลาคม 2021)</h2>
             <p calss="col-md-12">เพราะเมล็ดกาแฟจะมีการขึ้นลงตามฤดูกาลผลิตซึ่งจะทำให้ส่งผลต่อเมล็ดกาแฟที่เรามี ข้างนี้เป็นกาแฟที่เรามีอยู่ใน stock พร้อมคั่วและส่งให้เพื่อน ๆ ได้</p>
           </div>
         </div>
         <!-- END row -->
+        
         <div class="row">
           <div class="col-md-4">
             <div class="probootstrap-pricing">
               <h2>ได้รับความนิยม</h2>
-              <p class="probootstrap-price"><strong>ดอยแม่โถ</strong></p>
-              <p class="probootstrap-note">ยังเหลือเพียง 0 กรัม</p>
+              <p class="probootstrap-price"><strong>ขุนคอง</strong></p>
+              <p class="probootstrap-note"> 260 กรัม</p>
               <ul class="probootstrap-list text-left mb50">
                 <li class="probootstrap-check">ประเภท: กาแฟอาราบิก้า</li>
-                <li class="probootstrap-check">ที่ปลูก: ดอยแม่โถ, เชียงราย, ประเทศไทย</li>
+                <li class="probootstrap-check">ที่ปลูก: ขุนคอง, เชียงดาว, ประเทศไทย</li>
                 <li class="probootstrap-check">ความสูง: 1,200 เมตรเหนือระดับน้ำทะเล</li>
-                <li class="probootstrap-check">กระบวนการ: Wet (จะทำให้กาแฟได้รสชาติจากแหล่งที่ปลูกมากที่สุด)</li>
+                <li class="probootstrap-check">กระบวนการ: Honey </li>
               </ul>
               <p><a href="#" class="btn btn-black">หมด</a></p>
             </div>
@@ -163,14 +164,14 @@
             <div class="probootstrap-pricing">
               <h2>ได้รับความนิยม</h2>
               <p class="probootstrap-price"><strong>ดอยขุนลาว</strong></p>
-              <p class="probootstrap-note">เหลือเพียง 750 กรัม</p>
+              <p class="probootstrap-note">เหลือเพียง 0 กรัม</p>
               <ul class="probootstrap-list text-left mb50">
                 <li class="probootstrap-check">ประเภท: กาแฟอาราบิก้า</li>
                 <li class="probootstrap-check">ที่ปลูก: ดอยขุนลาว, เชียงราย, ประเทศไทย</li>
                 <li class="probootstrap-check">ความสูง: 1,400 เมตรเหนือระดับน้ำทะเล</li>
                 <li class="probootstrap-check">กระบวนการ: Wet (จะทำให้กาแฟได้รสชาติจากแหล่งที่ปลูกมากที่สุด)</li>
               </ul>
-              <p><a href="#" class="btn btn-black">ลองสั่งเลย (180 บาท)</a></p>
+              <p><a href="#" class="btn btn-black">หมด</a></p>
             </div>
           </div>
           <div class="col-md-4">
@@ -180,7 +181,7 @@
               <p class="probootstrap-note">เหลือเพียง 0 กรัม</p>
               <ul class="probootstrap-list text-left mb50">
                 <li class="probootstrap-check">ประเภท: กาแฟอาราบิก้า</li>
-                <li class="probootstrap-check">ที่ปลูก: ดอยขุนลาว, เชียงราย, ประเทศไทย</li>
+                <li class="probootstrap-check">ที่ปลูก: ลำปาง, ประเทศไทย</li>
                 <li class="probootstrap-check">ความสูง: 1,200 เมตรเหนือระดับน้ำทะเล</li>
                 <li class="probootstrap-check">กระบวนการ: Wet (จะทำให้กาแฟได้รสชาติจากแหล่งที่ปลูกมากที่สุด)</li>
               </ul>
@@ -191,42 +192,42 @@
             <div class="probootstrap-pricing probootstrap-popular probootstrap-shaow">
               <h2>อยากให้ลองชิม</h2>
               <p class="probootstrap-price"><strong>ท่าสองยาง</strong></p>
-              <p class="probootstrap-note">เหลือเพียง 500 กรัม</p>
+              <p class="probootstrap-note">เหลือเพียง 0 กรัม</p>
               <ul class="probootstrap-list text-left mb50">
                 <li class="probootstrap-check">ประเภท: กาแฟอาราบิก้า</li>
                 <li class="probootstrap-check">ที่ปลูก: อำเภอท่าสองยาง, ตาก, ประเทศไทย</li>
                 <li class="probootstrap-check">ความสูง: 900 เมตรเหนือระดับน้ำทะเล</li>
                 <li class="probootstrap-check">กระบวนการ: Wet (จะทำให้กาแฟได้รสชาติจากแหล่งที่ปลูกมากที่สุด)</li>
               </ul>
-              <p><a href="#" class="btn btn-black">ลองสั่งเลย (180 บาท)</a></p>
+              <p><a href="#" class="btn btn-black">หมด</a></p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="probootstrap-pricing probootstrap-popular probootstrap-shaow">
               <h2>อยากให้ลองชิม</h2>
               <p class="probootstrap-price"><strong>ดอยเลาวู</strong></p>
-              <p class="probootstrap-note">เหลือเพียง 750 กรัม</p>
+              <p class="probootstrap-note">เหลือเพียง 0 กรัม</p>
               <ul class="probootstrap-list text-left mb50">
                 <li class="probootstrap-check">ประเภท: กาแฟอาราบิก้า</li>
                 <li class="probootstrap-check">ที่ปลูก: ดอยเลาวู, เชียงใหม่, ประเทศไทย</li>
                 <li class="probootstrap-check">ความสูง: 1,400 เมตรเหนือระดับน้ำทะเล</li>
                 <li class="probootstrap-check">กระบวนการ: Dry (รสชาติของกาแฟจะค่อนข้างเปรี้ยวและมีกลิ่นผลไม้สูง)</li>
               </ul>
-              <p><a href="#" class="btn btn-black">ลองสั่งเลย (180 บาท)</a></p>
+              <p><a href="#" class="btn btn-black">หมด</a></p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="probootstrap-pricing probootstrap-popular probootstrap-shaow">
               <h2>อยากให้ลองชิม</h2>
               <p class="probootstrap-price"><strong>พบพระ</strong></p>
-              <p class="probootstrap-note">เหลือเพียง 750  กรัม</p>
+              <p class="probootstrap-note">เหลือเพียง 0 กรัม</p>
               <ul class="probootstrap-list text-left mb50">
                 <li class="probootstrap-check">ประเภท: กาแฟอาราบิก้า</li>
                 <li class="probootstrap-check">ที่ปลูก: พบพระ, ตาก, ประเทศไทย</li>
                 <li class="probootstrap-check">ความสูง: 1,406 เมตรเหนือระดับน้ำทะเล</li>
                 <li class="probootstrap-check">กระบวนการ: Wet (จะทำให้กาแฟได้รสชาติจากแหล่งที่ปลูกมากที่สุด)</li>
               </ul>
-              <p><a href="#" class="btn btn-black">ลองสั่งเลย (180 บาท)</a></p>
+              <p><a href="#" class="btn btn-black">หมด</a></p>
             </div>
         </div>
       </div>
