--- a/index.html
+++ b/index.html
@@ -144,7 +144,6 @@
           </div>
         </div>
         <!-- END row -->
-        
         <div class="row">
           <div class="col-md-4">
             <div class="probootstrap-pricing">
@@ -333,7 +332,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <p>ขอบคุณสำหนับการสนับสนุน</p>
+            <p>ขอบคุณสำหรับการสนับสนุน</p>
           </div>
         </div>
       </div>
