update stock 31/oct/2021

--- a/index.html
+++ b/index.html
@@ -56,7 +56,79 @@
       </div>
     </section>
 
- 
+    <section class="probootstrap-section" data-section="pricing">
+      <div class="container">
+        <div class="row text-center mb100">
+          <div class="col-md-8 col-md-offset-2 probootstrap-section-heading">
+            <h2 class="mb30 text-black probootstrap-heading">Weekly Stock Update!! (31 ตุลาคม 2021)</h2>
+            <p calss="col-md-12">เพราะเมล็ดกาแฟจะมีการขึ้นลงตามฤดูกาลผลิตซึ่งจะทำให้ส่งผลต่อเมล็ดกาแฟที่เรามี ข้างนี้เป็นกาแฟที่เรามีอยู่ใน stock พร้อมคั่วและส่งให้เพื่อน ๆ ได้</p>
+          </div>
+        </div>
+        <!-- END row -->
+        <div class="row">
+
+          <div class="col-md-4">
+            <div class="probootstrap-pricing">
+              <h2>ได้รับความนิยม</h2>
+              <p class="probootstrap-price"><strong>แม่อูคอ</strong></p>
+              <p class="probootstrap-note"> 1,000 กรัม</p>
+              <ul class="probootstrap-list text-left mb50">
+                <li class="probootstrap-check">ประเภท: กาแฟอาราบิก้า</li>
+                <li class="probootstrap-check">ที่ปลูก: หมู่่บ้านแม่อูคอ, อ.ขุนยวม, จ.แม่ฮ่องสอน</li>
+                <li class="probootstrap-check">ความสูง: 2,005 เมตรเหนือระดับน้ำทะเล</li>
+                <li class="probootstrap-check">กระบวนการ: Wet </li>
+              </ul>
+              <p><a href="#" class="btn btn-black">สั่งเลย</a></p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="probootstrap-pricing">
+              <h2>ได้รับความนิยม</h2>
+              <p class="probootstrap-price"><strong>ดอยขุนลาว</strong></p>
+              <p class="probootstrap-note">เหลือเพียง 2,000 กรัม</p>
+              <ul class="probootstrap-list text-left mb50">
+                <li class="probootstrap-check">ประเภท: กาแฟอาราบิก้า</li>
+                <li class="probootstrap-check">ที่ปลูก: ดอยขุนลาว, เชียงราย, ประเทศไทย</li>
+                <li class="probootstrap-check">ความสูง: 1,400 เมตรเหนือระดับน้ำทะเล</li>
+                <li class="probootstrap-check">กระบวนการ: Wet (จะทำให้กาแฟได้รสชาติจากแหล่งที่ปลูกมากที่สุด)</li>
+              </ul>
+              <p><a href="#" class="btn btn-black">สั่งเลย</a></p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="probootstrap-pricing probootstrap-popular probootstrap-shaow">
+              <h2>อยากให้ลองชิม</h2>
+              <p class="probootstrap-price"><strong>ห้วยน้ำดัง</strong></p>
+              <p class="probootstrap-note">เหลือเพียง 1,000 กรัม</p>
+              <ul class="probootstrap-list text-left mb50">
+                <li class="probootstrap-check">ประเภท: กาแฟอาราบิก้า</li>
+                <li class="probootstrap-check">ที่ปลูก: ดอยห้วยน้ำดัง, อ.แม่แตง, อ.เชียงดาว, จ.เชียงใหม่</li>
+                <li class="probootstrap-check">ความสูง: 1,900 เมตรเหนือระดับน้ำทะเล</li>
+                <li class="probootstrap-check">กระบวนการ: Wet (จะทำให้กาแฟได้รสชาติจากแหล่งที่ปลูกมากที่สุด)</li>
+              </ul>
+              <p><a href="#" class="btn btn-black">สั่งเลย</a></p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="probootstrap-pricing">
+              <h2>ได้รับความนิยม</h2>
+              <p class="probootstrap-price"><strong>ดอยแม่สลอง</strong></p>
+              <p class="probootstrap-note">เหลือเพียง 1,000 กรัม</p>
+              <ul class="probootstrap-list text-left mb50">
+                <li class="probootstrap-check">ประเภท: กาแฟอาราบิก้า</li>
+                <li class="probootstrap-check">ที่ปลูก: ดอยแม่สลอง, เชียงราย, ประเทศไทย</li>
+                <li class="probootstrap-check">ความสูง: 1,200 เมตรเหนือระดับน้ำทะเล</li>
+                <li class="probootstrap-check">กระบวนการ: Wet (จะทำให้กาแฟได้รสชาติจากแหล่งที่ปลูกมากที่สุด)</li>
+              </ul>
+              <p><a href="#" class="btn btn-black">สั่งเลย</a></p>
+            </div>
+          </div>
+
+          
+        </div>
+      </div>
+    </section>
+    <!-- END section -->
 
     <section class="probootstrap-section probootstrap-bg-light" id="features" data-section="features">
       <div class="container">
@@ -131,64 +203,6 @@
           </div>
         </div>
         <!-- END row -->
-      </div>
-    </section>
-    <!-- END section -->
-
-    <section class="probootstrap-section" data-section="pricing">
-      <div class="container">
-        <div class="row text-center mb100">
-          <div class="col-md-8 col-md-offset-2 probootstrap-section-heading">
-            <h2 class="mb30 text-black probootstrap-heading">Weekly Stock Update!! (27 ตุลาคม 2021)</h2>
-            <p calss="col-md-12">เพราะเมล็ดกาแฟจะมีการขึ้นลงตามฤดูกาลผลิตซึ่งจะทำให้ส่งผลต่อเมล็ดกาแฟที่เรามี ข้างนี้เป็นกาแฟที่เรามีอยู่ใน stock พร้อมคั่วและส่งให้เพื่อน ๆ ได้</p>
-          </div>
-        </div>
-        <!-- END row -->
-        <div class="row">
-
-          <div class="col-md-4">
-            <div class="probootstrap-pricing">
-              <h2>ได้รับความนิยม</h2>
-              <p class="probootstrap-price"><strong>ขุนคอง</strong></p>
-              <p class="probootstrap-note"> 260 กรัม</p>
-              <ul class="probootstrap-list text-left mb50">
-                <li class="probootstrap-check">ประเภท: กาแฟอาราบิก้า</li>
-                <li class="probootstrap-check">ที่ปลูก: ขุนคอง, เชียงดาว, ประเทศไทย</li>
-                <li class="probootstrap-check">ความสูง: 1,200 เมตรเหนือระดับน้ำทะเล</li>
-                <li class="probootstrap-check">กระบวนการ: Honey </li>
-              </ul>
-              <p><a href="#" class="btn btn-black">หมด</a></p>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="probootstrap-pricing">
-              <h2>ได้รับความนิยม</h2>
-              <p class="probootstrap-price"><strong>ดอยขุนลาว</strong></p>
-              <p class="probootstrap-note">เหลือเพียง 0 กรัม</p>
-              <ul class="probootstrap-list text-left mb50">
-                <li class="probootstrap-check">ประเภท: กาแฟอาราบิก้า</li>
-                <li class="probootstrap-check">ที่ปลูก: ดอยขุนลาว, เชียงราย, ประเทศไทย</li>
-                <li class="probootstrap-check">ความสูง: 1,400 เมตรเหนือระดับน้ำทะเล</li>
-                <li class="probootstrap-check">กระบวนการ: Wet (จะทำให้กาแฟได้รสชาติจากแหล่งที่ปลูกมากที่สุด)</li>
-              </ul>
-              <p><a href="#" class="btn btn-black">หมด</a></p>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="probootstrap-pricing probootstrap-popular probootstrap-shaow">
-              <h2>อยากให้ลองชิม</h2>
-              <p class="probootstrap-price"><strong>ปางมะโอ</strong></p>
-              <p class="probootstrap-note">เหลือเพียง 0 กรัม</p>
-              <ul class="probootstrap-list text-left mb50">
-                <li class="probootstrap-check">ประเภท: กาแฟอาราบิก้า</li>
-                <li class="probootstrap-check">ที่ปลูก: ลำปาง, ประเทศไทย</li>
-                <li class="probootstrap-check">ความสูง: 1,200 เมตรเหนือระดับน้ำทะเล</li>
-                <li class="probootstrap-check">กระบวนการ: Wet (จะทำให้กาแฟได้รสชาติจากแหล่งที่ปลูกมากที่สุด)</li>
-              </ul>
-              <p><a href="#" class="btn btn-black">หมด</a></p>
-            </div>
-          </div>
-        </div>
       </div>
     </section>
     <!-- END section -->
