--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <li class="probootstrap-check">ความสูง: 1,400 เมตรเหนือระดับน้ำทะเล</li>
                 <li class="probootstrap-check">กระบวนการ: Wet (จะทำให้กาแฟได้รสชาติจากแหล่งที่ปลูกมากที่สุด)</li>
               </ul>
-              <p><a href="#" class="btn btn-black">สั่งเลย</a></p>
+              <p><a href="#" class="btn btn-black">สั่งได้เลย</a></p>
             </div>
           </div>
           <div class="col-md-4">
