--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="container">
         <div class="row text-center mb100">
           <div class="col-md-8 col-md-offset-2 probootstrap-section-heading">
-            <h2 class="mb30 text-black probootstrap-heading">Weekly Stock Update!! (31 ตุลาคม 2021)</h2>
+            <h2 class="mb30 text-black probootstrap-heading">Weekly Stock Update!!</h2>
             <p calss="col-md-12">เพราะเมล็ดกาแฟจะมีการขึ้นลงตามฤดูกาลผลิตซึ่งจะทำให้ส่งผลต่อเมล็ดกาแฟที่เรามี ข้างนี้เป็นกาแฟที่เรามีอยู่ใน stock พร้อมคั่วและส่งให้เพื่อน ๆ ได้</p>
           </div>
         </div>
@@ -70,12 +70,11 @@
           <div class="col-md-4">
             <div class="probootstrap-pricing">
               <h2>ได้รับความนิยม</h2>
-              <p class="probootstrap-price"><strong>แม่อูคอ</strong></p>
-              <p class="probootstrap-note"> 750 กรัม</p>
+              <p class="probootstrap-price"><strong>เลาวู</strong></p>            
               <ul class="probootstrap-list text-left mb50">
                 <li class="probootstrap-check">ประเภท: กาแฟอาราบิก้า</li>
-                <li class="probootstrap-check">ที่ปลูก: หมู่่บ้านแม่อูคอ, อ.ขุนยวม, จ.แม่ฮ่องสอน</li>
-                <li class="probootstrap-check">ความสูง: 2,005 เมตรเหนือระดับน้ำทะเล</li>
+                <li class="probootstrap-check">ที่ปลูก: หมู่่บ้านเลาวู, อ.เวียงแหง, จ.เชียงใหม่</li>
+                <li class="probootstrap-check">ความสูง: 1,400 เมตรเหนือระดับน้ำทะเล</li>
                 <li class="probootstrap-check">กระบวนการ: Wet </li>
               </ul>
               <p><a href="#" class="btn btn-black">สั่งเลย</a></p>
@@ -85,7 +84,6 @@
             <div class="probootstrap-pricing">
               <h2>ได้รับความนิยม</h2>
               <p class="probootstrap-price"><strong>ดอยขุนลาว</strong></p>
-              <p class="probootstrap-note">เหลือเพียง 1,750 กรัม</p>
               <ul class="probootstrap-list text-left mb50">
                 <li class="probootstrap-check">ประเภท: กาแฟอาราบิก้า</li>
                 <li class="probootstrap-check">ที่ปลูก: ดอยขุนลาว, เชียงราย, ประเทศไทย</li>
@@ -99,7 +97,6 @@
             <div class="probootstrap-pricing probootstrap-popular probootstrap-shaow">
               <h2>อยากให้ลองชิม</h2>
               <p class="probootstrap-price"><strong>ห้วยน้ำดัง</strong></p>
-              <p class="probootstrap-note">เหลือเพียง 750 กรัม</p>
               <ul class="probootstrap-list text-left mb50">
                 <li class="probootstrap-check">ประเภท: กาแฟอาราบิก้า</li>
                 <li class="probootstrap-check">ที่ปลูก: ดอยห้วยน้ำดัง, อ.แม่แตง, อ.เชียงดาว, จ.เชียงใหม่</li>
@@ -113,7 +110,6 @@
             <div class="probootstrap-pricing">
               <h2>ได้รับความนิยม</h2>
               <p class="probootstrap-price"><strong>ดอยแม่สลอง</strong></p>
-              <p class="probootstrap-note">เหลือเพียง 750 กรัม</p>
               <ul class="probootstrap-list text-left mb50">
                 <li class="probootstrap-check">ประเภท: กาแฟอาราบิก้า</li>
                 <li class="probootstrap-check">ที่ปลูก: ดอยแม่สลอง, เชียงราย, ประเทศไทย</li>
