--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
         <div class="row text-center mb100">
           <div class="col-md-8 col-md-offset-2 probootstrap-section-heading">
             <h2 class="mb30 text-black probootstrap-heading">กาแฟที่เรามี</h2>
-            <p calss="col-md-12">เพราะเมล็ดกาแฟจะมีการขึ้นลงตามฤดูกาลผลิตซึ่งจะทำให้ส่งผลต่อเมล็ดกาแฟที่เรามี ข้างนี้เป็นกาแฟที่เรามีอยู่ใน stock พร้อมคั่วและส่งให้เพื่อน ๆ ได้</p>
+            <p calss="col-md-12">เมล็ดกาแฟจะมีการเปลี่ยนแปลงตามความเหมาะสมของฤดูกาล 
+              สามารถดูอัพเดทได้ตอนกดสั่งกาแฟ</p>
           </div>
         </div>
         <!-- END row -->
@@ -88,7 +89,7 @@
                 <li class="probootstrap-check">ประเภท: กาแฟอาราบิก้า</li>
                 <li class="probootstrap-check">ที่ปลูก: ดอยขุนลาว, เชียงราย, ประเทศไทย</li>
                 <li class="probootstrap-check">ความสูง: 1,400 เมตรเหนือระดับน้ำทะเล</li>
-                <li class="probootstrap-check">กระบวนการ: Wet (จะทำให้กาแฟได้รสชาติจากแหล่งที่ปลูกมากที่สุด)/Dry </li>
+                <li class="probootstrap-check">กระบวนการ: Wet/Dry </li>
               </ul>
               <p><a href="#" class="btn btn-black">สั่งได้เลย</a></p>
             </div>
@@ -101,20 +102,7 @@
                 <li class="probootstrap-check">ประเภท: กาแฟอาราบิก้า</li>
                 <li class="probootstrap-check">ที่ปลูก: ดอยห้วยน้ำดัง, อ.แม่แตง, อ.เชียงดาว, จ.เชียงใหม่</li>
                 <li class="probootstrap-check">ความสูง: 1,900 เมตรเหนือระดับน้ำทะเล</li>
-                <li class="probootstrap-check">กระบวนการ: Wet (จะทำให้กาแฟได้รสชาติจากแหล่งที่ปลูกมากที่สุด)</li>
-              </ul>
-              <p><a href="#" class="btn btn-black">สั่งเลย</a></p>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="probootstrap-pricing">
-              <h2>ได้รับความนิยม</h2>
-              <p class="probootstrap-price"><strong>ดอยแม่สลอง</strong></p>
-              <ul class="probootstrap-list text-left mb50">
-                <li class="probootstrap-check">ประเภท: กาแฟอาราบิก้า</li>
-                <li class="probootstrap-check">ที่ปลูก: ดอยแม่สลอง, เชียงราย, ประเทศไทย</li>
-                <li class="probootstrap-check">ความสูง: 1,200 เมตรเหนือระดับน้ำทะเล</li>
-                <li class="probootstrap-check">กระบวนการ: Wet (จะทำให้กาแฟได้รสชาติจากแหล่งที่ปลูกมากที่สุด)</li>
+                <li class="probootstrap-check">กระบวนการ: Wet </li>
               </ul>
               <p><a href="#" class="btn btn-black">สั่งเลย</a></p>
             </div>
